welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:32: error: '=' expected but identifier found.
def faire Motif() {
          ^PictureMono2:43: error: illegal start of simple expression
}
^